navbar bottom spacing fixed on both .html files

--- a/styles/05-pages/_company.scss
+++ b/styles/05-pages/_company.scss
@@ -240,7 +240,7 @@
 
 @media (min-width: 577px) {
   .navbar {
-    .company {
+    &--company {
       &__benefits {
         margin: 20px 0 35px 0;
       }
